--- a/src/3rdParty/SomaFM/ui/GUI_SomaFM.ui
+++ b/src/3rdParty/SomaFM/ui/GUI_SomaFM.ui
@@ -107,9 +107,12 @@
    <item row="0" column="0" colspan="2">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QComboBox" name="combo_lib_chooser">
-       <property name="focusPolicy">
-        <enum>Qt::StrongFocus</enum>
+      <widget class="QFrame" name="header_frame">
+       <property name="frameShape">
+        <enum>QFrame::StyledPanel</enum>
+       </property>
+       <property name="frameShadow">
+        <enum>QFrame::Raised</enum>
        </property>
       </widget>
      </item>
