--- a/src/GUI/DirectoryWidget/GUI_DirectoryWidget.ui
+++ b/src/GUI/DirectoryWidget/GUI_DirectoryWidget.ui
@@ -20,11 +20,20 @@
    <string/>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <property name="horizontalSpacing">
     <number>10</number>
-   </property>
-   <property name="margin">
-    <number>0</number>
    </property>
    <item row="1" column="0">
     <widget class="DirectoryTreeView" name="tv_dirs">
@@ -79,12 +88,12 @@
       <number>0</number>
      </property>
      <item>
-      <widget class="QComboBox" name="combo_libchooser">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
+      <widget class="QFrame" name="header_frame">
+       <property name="frameShape">
+        <enum>QFrame::StyledPanel</enum>
+       </property>
+       <property name="frameShadow">
+        <enum>QFrame::Raised</enum>
        </property>
       </widget>
      </item>
@@ -164,7 +173,6 @@
   </customwidget>
  </customwidgets>
  <tabstops>
-  <tabstop>combo_libchooser</tabstop>
   <tabstop>tv_dirs</tabstop>
   <tabstop>lv_files</tabstop>
  </tabstops>
