--- a/src/GUI/Preferences/PreferenceDialog/GUI_PreferenceDialog.ui
+++ b/src/GUI/Preferences/PreferenceDialog/GUI_PreferenceDialog.ui
@@ -49,6 +49,9 @@
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
+     <property name="childrenCollapsible">
+      <bool>false</bool>
+     </property>
      <widget class="QListWidget" name="list_preferences">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
