--- a/src/GUI/Plugins/Stream/GUI_Podcasts.ui
+++ b/src/GUI/Plugins/Stream/GUI_Podcasts.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>320</width>
-    <height>91</height>
+    <height>98</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
@@ -21,7 +21,7 @@
     <number>6</number>
    </property>
    <item row="1" column="0" colspan="2">
-    <widget class="QComboBox" name="combo_stream">
+    <widget class="SayonaraComboBox" name="combo_stream">
      <property name="focusPolicy">
       <enum>Qt::StrongFocus</enum>
      </property>
@@ -119,6 +119,11 @@
    <extends>QWidget</extends>
    <header>Interfaces/PlayerPlugin/PlayerPlugin.h</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>SayonaraComboBox</class>
+   <extends>QComboBox</extends>
+   <header>GUI/Helper/SayonaraWidget/SayonaraComboBox.h</header>
   </customwidget>
  </customwidgets>
  <resources>
