--- a/src/GUI/Plugins/Engine/AudioConverter/GUI_AudioConverter.ui
+++ b/src/GUI/Plugins/Engine/AudioConverter/GUI_AudioConverter.ui
@@ -34,7 +34,7 @@
     </widget>
    </item>
    <item row="7" column="2" colspan="2">
-    <widget class="QComboBox" name="cb_quality">
+    <widget class="SayonaraComboBox" name="cb_quality">
      <property name="focusPolicy">
       <enum>Qt::StrongFocus</enum>
      </property>
@@ -90,6 +90,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>SayonaraComboBox</class>
+   <extends>QComboBox</extends>
+   <header>GUI/Helper/SayonaraWidget/SayonaraComboBox.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
