--- a/src/GUI/Preferences/Language/GUI_LanguageChooser.ui
+++ b/src/GUI/Preferences/Language/GUI_LanguageChooser.ui
@@ -22,7 +22,7 @@
     </widget>
    </item>
    <item row="0" column="0">
-    <widget class="QComboBox" name="combo_lang">
+    <widget class="SayonaraComboBox" name="combo_lang">
      <property name="currentText">
       <string notr="true">English</string>
      </property>
@@ -35,6 +35,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>SayonaraComboBox</class>
+   <extends>QComboBox</extends>
+   <header>GUI/Helper/SayonaraWidget/SayonaraComboBox.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
