--- a/src/GUI/Preferences/Notifications/GUI_Notifications.ui
+++ b/src/GUI/Preferences/Notifications/GUI_Notifications.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>175</height>
+    <height>98</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
@@ -29,7 +29,7 @@
     </widget>
    </item>
    <item row="1" column="0" colspan="2">
-    <widget class="QComboBox" name="combo_notification">
+    <widget class="SayonaraComboBox" name="combo_notification">
      <property name="focusPolicy">
       <enum>Qt::StrongFocus</enum>
      </property>
@@ -61,6 +61,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>SayonaraComboBox</class>
+   <extends>QComboBox</extends>
+   <header>GUI/Helper/SayonaraWidget/SayonaraComboBox.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
