--- a/src/3rdParty/Soundcloud/ui/GUI_SoundcloudLibrary.ui
+++ b/src/3rdParty/Soundcloud/ui/GUI_SoundcloudLibrary.ui
@@ -329,35 +329,7 @@
       </spacer>
      </item>
      <item>
-      <widget class="SayonaraComboBox" name="combo_searchfilter">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="minimumSize">
-        <size>
-         <width>120</width>
-         <height>0</height>
-        </size>
-       </property>
-       <item>
-        <property name="text">
-         <string>Search</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Genre</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Path</string>
-        </property>
-       </item>
-      </widget>
+      <widget class="SayonaraComboBox" name="combo_searchfilter"/>
      </item>
      <item>
       <widget class="QLineEdit" name="le_search">
@@ -371,12 +343,6 @@
      </item>
      <item>
       <widget class="QPushButton" name="btn_clear">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
        <property name="focusPolicy">
         <enum>Qt::ClickFocus</enum>
        </property>
