--- a/src/GUI/Player/GUI_Logger.ui
+++ b/src/GUI/Player/GUI_Logger.ui
@@ -11,9 +11,6 @@
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
-    <widget class="QPlainTextEdit" name="te_log"/>
-   </item>
    <item row="1" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
@@ -44,6 +41,9 @@
       </widget>
      </item>
     </layout>
+   </item>
+   <item row="0" column="0" colspan="2">
+    <widget class="QTextEdit" name="te_log"/>
    </item>
   </layout>
  </widget>
